# klippa

./: Cargo.toml  README.md
assets/test/: wkt.csv
benches/: benchmark.rs
src/: geom.rs  lib.rs  rect.rs  util.rs
src/tests/: mod.rs  test_csv.rs  test_geom.rs  test_polygon.rs  test_rect.rs
tests/: test_csv.rs  test_geom.rs  test_polygon.rs  test_rect.rs
