[package]
name = "klippa"
version = "0.2.0"
edition = "2021"

[dependencies]
geo-types = "0.7.13"
log = "0.4.22"

[dev-dependencies]
criterion = "0.5.1"
csv = "1.3.1"
geo = { version = "0.29.1", default-features = false, features = ["earcutr", "spade"] }
wkt = "0.11.1"

[[bench]]
name = "benchmark"
harness = false
