[package]
name = "klippa"
version = "0.2.6"
edition = "2021"
description = "Geometry clipper using rectangular window"
license = "MIT"
repository = "https://github.com/alamminsalo/klippa"

[dependencies]
geo-types = "0.7.13"
log = "0.4.22"

[dev-dependencies]
criterion = "0.5.1"
csv = "1.3.1"
env_logger = "0.11.5"
geo = { version = "0.29.1", default-features = false}
wkt = "0.11.1"

[[bench]]
name = "benchmark"
harness = false
